# mimicfg

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: Config.cmake.in
include/mimicfg/: BaseConfig.h  FileConfig.h  ICEConfig.h  KalmanConfig.h  NodesConfig.h  SignalerConfig.h  StrConfig.h
src/: BaseConfig.cpp  CMakeLists.txt
test/: CMakeLists.txt  UserConfigTest.cpp
